--- a/themes/butterfly/source/css/_custom/custom.css
+++ b/themes/butterfly/source/css/_custom/custom.css
@@ -1271,7 +1271,7 @@ input#pic-link {
 
 /* heo 加载动画头像 */
 .loading-img {
-  background: url(https://tuchuang.voooe.cn/images/2023/01/02/avatar.webp)
+  background: url(https://cdn.staticaly.com/gh/1405720461/images@master/img/188.jpg)
     no-repeat center center;
   background-size: cover;
 }
