--- a/themes/butterfly/source/css/_layout/post.styl
+++ b/themes/butterfly/source/css/_layout/post.styl
@@ -496,7 +496,7 @@ beautify()
   .post-copyright-u
     display inline-block
     width fit-content
-    padding 2px 5px
+    padding 2px 60px 2px 5px
 [data-theme="dark"]
   #post
     .post-copyright
