修改footer以及更改友链页面

--- a/themes/butterfly/layout/includes/footer.pug
+++ b/themes/butterfly/layout/includes/footer.pug
@@ -8,28 +8,25 @@
             div
               | 我想和你一起生活，在某个小镇，共享无尽黄昏，和绵绵不绝的钟声✨
             .btn-xz-box
-              a.btn-xz(href='https://stellarium.org/') 点击开启星辰之旅
+              a.btn-xz(href='https://mst.ai/home') 点击开启星辰之旅
         .t-t-r
           p.ft-t.t-l-t 猜你想看💡
           ul.ft-links
             li
-              a(href='/box/nav/') 网址导航
               a(href='/social/link/') 我的朋友
-            li
               a(href='/comments/') 留点什么
-              a(href='/personal/about/') 关于作者
-            li
-              a(href='/box/Gallery/') 我的画廊
-              a(href='/archives/') 文章归档
-            li
-              a(href='/categories/') 文章分类
-              a(href='/tags/') 文章标签
             li
               a(href='/personal/bb/') 我的唠叨
+              a(href='/box/Gallery/') 我的画廊
+            li
+              a(href='/archives/') 文章归档
+              a(href='/categories/') 文章分类
+            li
+              a(href='/tags/') 文章标签
               a(href='/site/census/') 网站统计
-            //- li
-            //-   a(href='/site/time/') 建设进程
-            //-   a(href='/posts/eec9786.html') 魔改指南
+            li
+              a(href='/site/time/') 建设进程
+              a(href='/personal/about/') 关于作者
     .ft-item-2
       p.ft-t 推荐友链⌛
       .ft-img-group
