优化图片加载问题

--- a/themes/butterfly/source/css/_custom/custom.css
+++ b/themes/butterfly/source/css/_custom/custom.css
@@ -1086,7 +1086,7 @@ button#go-up:hover #percent {
 .bgbox {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .pimgbox,
