优化图片加载

--- a/themes/butterfly/source/css/_custom/custom.css
+++ b/themes/butterfly/source/css/_custom/custom.css
@@ -1117,7 +1117,8 @@ button#go-up:hover #percent {
 }
 
 .imgbox {
-  height: 95px;
+  width: 143px;
+  height: 80px;
 }
 
 @media screen and (max-width: 768px) {
@@ -1732,7 +1733,8 @@ a:hover {
 
 /* 侧边栏 */
 div#rightside {
-  display: var(--rightside-display);
+  /* display: var(--rightside-display); */
+  display: block;
   opacity: 0.98 !important;
   transform: translateX(-58px);
 }
