修复bug，添加更换壁纸功能

--- a/themes/butterfly/source/css/_custom/custom.css
+++ b/themes/butterfly/source/css/_custom/custom.css
@@ -1117,8 +1117,8 @@ button#go-up:hover #percent {
 }
 
 .imgbox {
-  width: 143px;
-  height: 80px;
+  width: 184;
+  height: 103;
 }
 
 @media screen and (max-width: 768px) {
