添加恋爱小屋

--- a/themes/butterfly/layout/includes/head.pug
+++ b/themes/butterfly/layout/includes/head.pug
@@ -10,7 +10,7 @@
 - var tabTitle = is_home() || !pageTitle ? config.title + isSubtitle : pageTitle + ' | ' + config.title
 
 - var pageKeywords
-- if (page.keywords) pageKeywords = Array.isArray(page.keywords) ? (page.keywords).join(',') :  ([]).join(',') || page.keywords
+- if (page.password) pageKeywords = Array.isArray(page.password) ? (page.password).join(',') :  ([]).join(',') || page.password
 - else if (page.tags && page.tags.length) pageKeywords = page.tags.data.map(function(tag) {return tag.name;}).join(',')
 - else pageKeywords = Array.isArray(config.keywords) ? (config.keywords).join(','):  ([]).join(',') || config.keywords
 - var pageAuthor = config.email ? config.author + ',' + config.email : config.author
