--- a/themes/butterfly/layout/includes/rightmenu.pug
+++ b/themes/butterfly/layout/includes/rightmenu.pug
@@ -61,12 +61,12 @@
             a.rightMenu-item(href="javascript:rmf.switchReadMode();")
                 i.fa.fa-book
                 span='阅读模式'
-        //- a.rightMenu-item(href="/personal/about/")
-        //-     i.fa.fa-info-circle
-        //-     span='关于博客'
-        a.rightMenu-item(href="/comments/")
-            i.fas.fa-comment
-            span='留言板'
+        a.rightMenu-item(href="/personal/about/")
+            i.fa.fa-info-circle
+            span='关于博客'
+        //- a.rightMenu-item(href="/comments/")
+        //-     i.fas.fa-comment
+        //-     span='留言板'
         a.rightMenu-item(href="javascript:toggleWinbox();")
             i.fas.fa-cog
             span='美化设置'
