--- a/themes/butterfly/layout/includes/footer.pug
+++ b/themes/butterfly/layout/includes/footer.pug
@@ -23,7 +23,7 @@
               a(href='/categories/') 文章分类
             li
               a(href='/tags/') 文章标签
-              a(href='/box/animation/') 动漫追番
+              a(href='/personal/about/') 关于博客
 
     .ft-item-2
       p.ft-t 推荐友链⌛
