--- a/themes/butterfly/source/css/_custom/custom.css
+++ b/themes/butterfly/source/css/_custom/custom.css
@@ -3079,6 +3079,118 @@ hr:before {
   font-size: 15px !important;
 }
 
+@media screen and (min-width: 900px) {
+  /* ------  八音盒页面音乐播放器  ------ */
+  /* 左边大图 */
+  .aplayer.aplayer-withlrc .aplayer-pic{
+    width: 150px !important;
+    height: 150px !important;
+  }
+
+  /* 暂停按钮 */
+  .aplayer.aplayer-withlrc .aplayer-pic .aplayer-play{
+    width: 50px !important;
+    height: 50px !important;
+    margin: 0 -25px -25px 0 !important;
+  }
+
+  .aplayer.aplayer-withlrc .aplayer-pic .aplayer-play svg{
+    top: 7px !important;
+    left: 15px !important;
+    height: 35px !important;
+    width: 24px !important;
+  }
+
+  /* 开始按钮 */
+  .aplayer.aplayer-withlrc .aplayer-pic .aplayer-pause {
+    width: 30px !important;
+    height: 30px !important;
+  }
+
+  .aplayer.aplayer-withlrc .aplayer-pic .aplayer-pause svg{
+    top: 3px !important;
+    left: 2px !important;
+    height: 24px !important;
+    width: 27px !important;
+  }
+
+  /* 右边 */
+  .aplayer.aplayer-withlrc .aplayer-info {
+    height: 150px !important;
+    margin-left: 150px !important;
+  }
+
+  .aplayer.aplayer-withlrc .aplayer-info .aplayer-music {
+    height: 30px !important;
+  }
+
+  .aplayer.aplayer-withlrc .aplayer-info .aplayer-music .aplayer-title {
+    font-size: 20px !important;
+  }
+
+  .aplayer.aplayer-withlrc .aplayer-info .aplayer-music .aplayer-author {
+    font-size: 15px !important;
+  }
+
+  .aplayer.aplayer-withlrc .aplayer-lrc {
+    height: 80px !important;
+  }
+
+  /* 歌词 */
+  /* 选到的那行 */
+  .aplayer .aplayer-lrc p.aplayer-lrc-current {
+    height: 22px !important;
+    line-height: 22px !important;
+    font-size: 16px;
+  }
+
+  .aplayer.aplayer-withlrc .aplayer-lrc p.aplayer-lrc-current {
+    height: 24px !important;
+    line-height: 24px !important;
+    font-size: 18px !important;
+  }
+
+  .aplayer.aplayer-withlrc .aplayer-lrc p {
+    font-size: 16px !important;
+    line-height: 22px!important;
+    height: 22px!important;
+  }
+
+  /* 进度条 */
+  .aplayer.aplayer-withlrc .aplayer-info .aplayer-controller .aplayer-bar-wrap .aplayer-bar{
+    height: 3px !important;
+  }
+
+  .aplayer.aplayer-withlrc .aplayer-info .aplayer-controller .aplayer-bar-wrap .aplayer-bar .aplayer-loaded{
+    height: 3px !important;
+  }
+
+  .aplayer.aplayer-withlrc .aplayer-info .aplayer-controller .aplayer-bar-wrap .aplayer-bar .aplayer-played{
+    height: 3px !important;
+  }
+
+  /* 进度条右边 */
+  .aplayer.aplayer-withlrc .aplayer-info .aplayer-controller .aplayer-time {
+    bottom: 7px !important;
+  }
+
+  /* 下面歌单 */
+  .aplayer.aplayer-withlrc .aplayer-list {
+    margin-top: 10px !important;
+    max-height: 612px !important;
+  }
+
+  .aplayer.aplayer-withlrc .aplayer-list ol {
+    max-height: 612px !important;
+  }
+
+  .aplayer.aplayer-withlrc .aplayer-list ol li {
+    height: 40px !important;
+    line-height: 40px !important;
+    font-size: 16px !important;
+  }
+}
+
 /* ----- 底部音乐播放器 ----- */
 .aplayer.aplayer-fixed {
   bottom: 63px !important;
@@ -3097,116 +3209,8 @@ hr:before {
   margin-bottom: 66px !important;
 }
 
-/* ------  八音盒页面音乐播放器  ------ */
-/* 左边大图 */
-.aplayer.aplayer-withlrc .aplayer-pic{
-  width: 150px !important;
-  height: 150px !important;
-}
-
-/* 暂停按钮 */
-.aplayer.aplayer-withlrc .aplayer-pic .aplayer-play{
-  width: 50px !important;
-  height: 50px !important;
-  margin: 0 -25px -25px 0 !important;
-}
-
-.aplayer.aplayer-withlrc .aplayer-pic .aplayer-play svg{
-  top: 7px !important;
-  left: 15px !important;
-  height: 35px !important;
-  width: 24px !important;
-}
-
-/* 开始按钮 */
-.aplayer.aplayer-withlrc .aplayer-pic .aplayer-pause {
-  width: 30px !important;
-    height: 30px !important;
-}
-
-.aplayer.aplayer-withlrc .aplayer-pic .aplayer-pause svg{
-  top: 3px !important;
-  left: 2px !important;
-  height: 24px !important;
-  width: 27px !important;
-}
-
-/* 右边 */
-.aplayer.aplayer-withlrc .aplayer-info {
-  height: 150px !important;
-  margin-left: 150px !important;
-}
-
-.aplayer.aplayer-withlrc .aplayer-info .aplayer-music {
-  height: 30px !important;
-}
-
-.aplayer.aplayer-withlrc .aplayer-info .aplayer-music .aplayer-title {
-  font-size: 20px !important;
-}
-
-.aplayer.aplayer-withlrc .aplayer-info .aplayer-music .aplayer-author {
-  font-size: 15px !important;
-}
-
-.aplayer.aplayer-withlrc .aplayer-lrc {
-  height: 80px !important;
-}
-
-/* 歌词 */
-/* 选到的那行 */
 .aplayer .aplayer-lrc p.aplayer-lrc-current {
-  height: 22px !important;
-  line-height: 22px !important;
   color: pink;
-  font-size: 16px;
-}
-
-.aplayer.aplayer-withlrc .aplayer-lrc p.aplayer-lrc-current {
-  height: 24px !important;
-  line-height: 24px !important;
-  color: pink;
-  font-size: 18px !important;
-}
-
-.aplayer.aplayer-withlrc .aplayer-lrc p {
-  font-size: 16px !important;
-  line-height: 22px!important;
-  height: 22px!important;
-}
-
-/* 进度条 */
-.aplayer.aplayer-withlrc .aplayer-info .aplayer-controller .aplayer-bar-wrap .aplayer-bar{
-  height: 3px !important;
-}
-
-.aplayer.aplayer-withlrc .aplayer-info .aplayer-controller .aplayer-bar-wrap .aplayer-bar .aplayer-loaded{
-  height: 3px !important;
-}
-
-.aplayer.aplayer-withlrc .aplayer-info .aplayer-controller .aplayer-bar-wrap .aplayer-bar .aplayer-played{
-  height: 3px !important;
-}
-
-/* 进度条右边 */
-.aplayer.aplayer-withlrc .aplayer-info .aplayer-controller .aplayer-time {
-  bottom: 7px !important;
-}
-
-/* 下面歌单 */
-.aplayer.aplayer-withlrc .aplayer-list {
-  margin-top: 10px !important;
-  max-height: 612px !important;
-}
-
-.aplayer.aplayer-withlrc .aplayer-list ol {
-  max-height: 612px !important;
-}
-
-.aplayer.aplayer-withlrc .aplayer-list ol li {
-  height: 40px !important;
-  line-height: 40px !important;
-  font-size: 16px !important;
 }
 
 /* --------------------------- */
@@ -3335,5 +3339,10 @@ hr:before {
     height: 675px;
     display:flex;
     flex-direction: column;
+  }
+
+  /* 手机适配音乐播放器 */
+  .aplayer.aplayer-fixed {
+    display: none;
   }
 }
