--- a/themes/butterfly/source/css/_custom/custom.css
+++ b/themes/butterfly/source/css/_custom/custom.css
@@ -858,8 +858,14 @@ h6::before {
 }
 
 /* 给需要的页面加侧边栏 --- 追番、影院、游戏、旧时光 */
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 600px) {
   .page:not(.page.home,.page.wjl_archive,.page:has(.layout>#page>#article-container>.bangumi-tabs),.page:has(.layout>#page>#article-container>.timeline),.page:has(.layout>#page>#article-container>.hexo-douban-tabs)) .aside-content {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .page:not(.page.home) .aside-content {
     display: none;
   }
 }
@@ -3347,96 +3353,99 @@ hr:before {
   .aplayer.aplayer-fixed {
     display: none;
   }
-}
 
-#article-container blockquote p{
-  /* display: none; */
+  /* 手机端不显示星星 */
+  .page:has(.layout>#page>#article-container>.hexo-douban-tabs) blockquote{
+    display: none;
+  }
 }
 
 /* 影院、游戏上面动画 */
-.wjl_rating {
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: center;
-  gap: 0.3rem;
-  --stroke: #666;
-  --fill: #ffc73a;
-  margin-top: -10px;
-}
-
-.wjl_rating input {
-  appearance: unset;
-}
-
-.wjl_rating label {
-  cursor: pointer;
-}
-
-.wjl_rating svg {
-  width: 3rem;
-  height: 3rem;
-  overflow: visible;
-  fill: transparent;
-  stroke: var(--stroke);
-  stroke-linejoin: bevel;
-  stroke-dasharray: 12;
-  animation: idle 4s linear infinite;
-  transition: stroke 0.2s, fill 0.5s;
-}
-
-@keyframes idle {
-  from {
-    stroke-dashoffset: 24;
+@media screen and (min-width: 600px) {
+  .wjl_rating {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    gap: 0.3rem;
+    --stroke: #666;
+    --fill: #ffc73a;
+    margin-top: -10px;
   }
-}
 
-.wjl_rating label:hover svg {
-  stroke: var(--fill);
-}
+  .wjl_rating input {
+    appearance: unset;
+  }
 
-.wjl_rating input:checked ~ label svg {
-  transition: 0s;
-  animation: idle 4s linear infinite, yippee 0.75s backwards;
-  fill: var(--fill);
-  stroke: var(--fill);
-  stroke-opacity: 0;
-  stroke-dasharray: 0;
-  stroke-linejoin: miter;
-  stroke-width: 8px;
-}
+  .wjl_rating label {
+    cursor: pointer;
+  }
 
-@keyframes yippee {
-  0% {
-    transform: scale(1);
-    fill: var(--fill);
-    fill-opacity: 0;
-    stroke-opacity: 1;
+  .wjl_rating svg {
+    width: 3rem;
+    height: 3rem;
+    overflow: visible;
+    fill: transparent;
     stroke: var(--stroke);
-    stroke-dasharray: 10;
-    stroke-width: 1px;
     stroke-linejoin: bevel;
+    stroke-dasharray: 12;
+    animation: idle 4s linear infinite;
+    transition: stroke 0.2s, fill 0.5s;
   }
 
-  30% {
-    transform: scale(0);
-    fill: var(--fill);
-    fill-opacity: 0;
-    stroke-opacity: 1;
-    stroke: var(--stroke);
-    stroke-dasharray: 10;
-    stroke-width: 1px;
-    stroke-linejoin: bevel;
+  @keyframes idle {
+    from {
+      stroke-dashoffset: 24;
+    }
   }
 
-  30.1% {
+  .wjl_rating label:hover svg {
     stroke: var(--fill);
+  }
+
+  .wjl_rating input:checked ~ label svg {
+    transition: 0s;
+    animation: idle 4s linear infinite, yippee 0.75s backwards;
+    fill: var(--fill);
+    stroke: var(--fill);
+    stroke-opacity: 0;
     stroke-dasharray: 0;
     stroke-linejoin: miter;
     stroke-width: 8px;
   }
 
-  60% {
-    transform: scale(1.2);
-    fill: var(--fill);
+  @keyframes yippee {
+    0% {
+      transform: scale(1);
+      fill: var(--fill);
+      fill-opacity: 0;
+      stroke-opacity: 1;
+      stroke: var(--stroke);
+      stroke-dasharray: 10;
+      stroke-width: 1px;
+      stroke-linejoin: bevel;
+    }
+
+    30% {
+      transform: scale(0);
+      fill: var(--fill);
+      fill-opacity: 0;
+      stroke-opacity: 1;
+      stroke: var(--stroke);
+      stroke-dasharray: 10;
+      stroke-width: 1px;
+      stroke-linejoin: bevel;
+    }
+
+    30.1% {
+      stroke: var(--fill);
+      stroke-dasharray: 0;
+      stroke-linejoin: miter;
+      stroke-width: 8px;
+    }
+
+    60% {
+      transform: scale(1.2);
+      fill: var(--fill);
+    }
   }
 }
