--- a/themes/butterfly/layout/includes/footer.pug
+++ b/themes/butterfly/layout/includes/footer.pug
@@ -3,12 +3,11 @@
     .ft-item-1
       .t-top
         .t-t-l
-          p.ft-t.t-l-t 格言🧬
+          p.ft-t.t-l-t 公益广告🧬
           .bg-ad
             div
-              | 我想和你一起生活，在某个小镇，共享无尽黄昏，和绵绵不绝的钟声✨
-            .btn-xz-box
-              a.btn-xz(href='https://mst.ai/home') 点击开启星辰之旅
+              | 国家反诈中心是国务院打击治理电信网络新型违法犯罪工作部际联席会议合成作战平台，集资源整合、情报研判、侦查指挥为一体，在打击、防范、治理电信网络诈骗等新型违法犯罪中发挥着重要作用。
+              a.btn-xz(href='https://www.hack-gov.com.cn/posts/21480.html') 下载（国家反诈中心）APP
         .t-t-r
           p.ft-t.t-l-t 猜你想看💡
           ul.ft-links
