修改页面底部适配

--- a/themes/butterfly/layout/includes/footer.pug
+++ b/themes/butterfly/layout/includes/footer.pug
@@ -31,11 +31,11 @@
           a(href='http://wjldarling.top' title='你好可爱')
             img(src='https://cdn.staticaly.com/gh/1405720461/images@master/img/188.jpg' alt='')
         .img-group-item
-        //-   a(href='javascript:void(0)' title='广告位招租')
-        //-     img(src='https://cdn.staticaly.com/gh/1405720461/images@master/img/188.jpg' alt='')
-        //- .img-group-item
-        //-   a(href='javascript:void(0)' title='广告位招租')
-        //-     img(src='https://cdn.staticaly.com/gh/1405720461/images@master/img/188.jpg' alt='')
+          a(href='https://fe32.top/' title='Ethan.Tzy')
+            img(src='https://bu.dusays.com/2022/05/02/626f92e193879.jpg' alt='')
+        .img-group-item
+          a(href='https://www.fomal.cc/' title='Fomalhaut🥝')
+            img(src='https://www.fomal.cc/assets/avatar.webp' alt='')
         //- .img-group-item
         //-   a(href='javascript:void(0)' title='广告位招租')
         //-     img(src='https://cdn.staticaly.com/gh/1405720461/images@master/img/188.jpg' alt='')
