--- a/themes/butterfly/source/css/_custom/custom.css
+++ b/themes/butterfly/source/css/_custom/custom.css
@@ -2366,7 +2366,7 @@ span.card-clock-weather {
 }
 
 .t-top .t-t-l .bg-ad {
-  width: 85%;
+  width: 86%;
   border-radius: 10px;
   padding: 0 10px;
 }
@@ -2425,8 +2425,12 @@ span.card-clock-weather {
   font-weight: 600;
 }
 
-.t-l-t {
-  padding-left: 14px;
+.t-t-l .t-l-t {
+  padding-left: 10px;
+}
+
+.t-t-r .t-l-t {
+  padding-left: 12px;
 }
 
 .ft-item-2 .ft-img-group .img-group-item {
