--- a/themes/butterfly/source/css/_custom/custom.css
+++ b/themes/butterfly/source/css/_custom/custom.css
@@ -3204,23 +3204,19 @@ hr:before {
   }
 
   /* 歌词 */
+  .aplayer.aplayer-withlrc .aplayer-lrc p {
+    font-size: 14px !important;
+  }
   /* 选到的那行 */
   .aplayer .aplayer-lrc p.aplayer-lrc-current {
     height: 22px !important;
     line-height: 22px !important;
-    font-size: 16px;
+    margin-top: 2px !important;
+    font-size: 16px !important;
   }
 
   .aplayer.aplayer-withlrc .aplayer-lrc p.aplayer-lrc-current {
-    height: 24px !important;
-    line-height: 24px !important;
     font-size: 18px !important;
-  }
-
-  .aplayer.aplayer-withlrc .aplayer-lrc p {
-    font-size: 16px !important;
-    line-height: 22px!important;
-    height: 22px!important;
   }
 
   /* 进度条 */
@@ -3244,12 +3240,12 @@ hr:before {
   /* 下面歌单 */
   .aplayer.aplayer-withlrc .aplayer-list {
     margin-top: 10px !important;
-    max-height: 612px !important;
+    /* max-height: 612px !important; */
   }
 
-  .aplayer.aplayer-withlrc .aplayer-list ol {
+  /* .aplayer.aplayer-withlrc .aplayer-list ol {
     max-height: 612px !important;
-  }
+  } */
 
   .aplayer.aplayer-withlrc .aplayer-list ol li {
     height: 40px !important;
@@ -3258,6 +3254,37 @@ hr:before {
   }
 }
 
+/* 八音盒夜间模式 */
+[data-theme="dark"]  #article-container{
+  /* color:seashell; */
+  background: var(--trans-dark);
+}
+
+[data-theme="dark"] .aplayer{
+  color:#6baaa1;
+  background: var(--trans-dark);
+}
+
+[data-theme="dark"] .aplayer .aplayer-list ol li .aplayer-list-author{
+  color:#d096b6;
+}
+
+[data-theme="dark"] .aplayer-list-light .aplayer-list-title{
+  text-shadow: 2px 2px 3px #89d1c5;
+}
+
+[data-theme="dark"] .aplayer-list-light .aplayer-list-author{
+  text-shadow: 2px 2px 3px #ebb1d6;
+}
+
+[data-theme="dark"] .aplayer .aplayer-lrc:before {
+  background: linear-gradient(180deg,rgba(25,25,25) 0,hsla(0,0%,100%,0));
+}
+
+[data-theme="dark"] .aplayer .aplayer-lrc:after {
+  height: 20%;
+  background: linear-gradient(180deg,hsla(0, 3%, 8%, 0) 0,hsla(0, 3%, 8%, 0.8))
+}
 /* ----- 底部音乐播放器 ----- */
 .aplayer.aplayer-fixed {
   bottom: 63px !important;
@@ -3279,7 +3306,6 @@ hr:before {
 .aplayer .aplayer-lrc p.aplayer-lrc-current {
   color: pink;
 }
-
 
 /* --------------------------- */
 
