--- a/themes/butterfly/layout/includes/footer.pug
+++ b/themes/butterfly/layout/includes/footer.pug
@@ -28,17 +28,18 @@
       p.ft-t 推荐友链⌛
       .ft-img-group
         .img-group-item
-          a(href='http://wjldarling.top' title='你好可爱')
+          a(href='http://wjldarling.top/' title='你好可爱')
             img(src='https://cdn.staticaly.com/gh/1405720461/images@master/img/188.jpg' alt='')
+        .img-group-item
+          a(href='https://www.biqing.top/' title='BiQing')
+            img(src='https://biqing-blog.oss-cn-hangzhou.aliyuncs.com/img/image-20230102161539190.png' alt='')
         .img-group-item
           a(href='https://fe32.top/' title='Ethan.Tzy')
             img(src='https://bu.dusays.com/2022/05/02/626f92e193879.jpg' alt='')
         .img-group-item
           a(href='https://www.fomal.cc/' title='Fomalhaut🥝')
             img(src='https://www.fomal.cc/assets/avatar.webp' alt='')
-        //- .img-group-item
-        //-   a(href='javascript:void(0)' title='广告位招租')
-        //-     img(src='https://cdn.staticaly.com/gh/1405720461/images@master/img/188.jpg' alt='')
+   
         //- .img-group-item
         //-   a(href='javascript:void(0)' title='广告位招租')
         //-     img(src='https://cdn.staticaly.com/gh/1405720461/images@master/img/188.jpg' alt='')
