--- a/themes/butterfly/layout/includes/footer.pug
+++ b/themes/butterfly/layout/includes/footer.pug
@@ -15,8 +15,11 @@
               a(href='/social/link/') 我的朋友
               a(href='/comments/') 留点什么
             li
-              a(href='/site/time/') 建设进程
+              a(href='/social/time/') 建设进程
               a(href='/box/Gallery/') 我的画廊
+            li
+              a(href='/life/bangumis/') 我的追番
+              a(href='/box/collect/') 我的收藏
             li
               a(href='/archives/') 文章归档
               a(href='/categories/') 文章分类
