--- a/themes/butterfly/layout/includes/post/post-copyright.pug
+++ b/themes/butterfly/layout/includes/post/post-copyright.pug
@@ -18,7 +18,7 @@
 
 if theme.post_copyright.enable && page.copyright !== false
   - let author = page.copyright_author ? page.copyright_author : config.author
-  - let url = page.copyright_url ? page.copyright_url : page.permalink
+  //- - let url = page.copyright_url ? page.copyright_url : page.permalink
   - let license = page.license ? page.license : theme.post_copyright.license
   - let license_url = page.license_url ? page.license_url : theme.post_copyright.license_url
   .post-copyright
@@ -27,7 +27,8 @@ if theme.post_copyright.enable && page.copyright !== false
         h #[=page.title]
     .post-copyright__type
       span.post-copyright-info
-        a(href=url_for(url))= theme.post_copyright.decode ? decodeURI(url) : url
+        a(href=url_for('https://wjldarling.top'))= 'https://wjldarling.top'
+        //- a(href=url_for(url))= theme.post_copyright.decode ? decodeURI(url) : url
     .post-copyright-m
       .post-copyright-m-info
         .post-copyright-a
