--- a/themes/butterfly/layout/includes/footer.pug
+++ b/themes/butterfly/layout/includes/footer.pug
@@ -85,16 +85,16 @@
   #workboard
   p#ghbdages
     a.github-badge(target='_blank' href="https://hexo.io/" style='margin-inline:5px' title="博客框架为Hexo_v6.3.0")
-      img(src="https://sourcebucket.s3.ladydaily.com/badge/Frame-Hexo-blue.svg" alt='')
+      img(src="https://sourcebucket.s3.bitiful.net/badge/Frame-Hexo-blue.svg" alt='')
 
     a.github-badge(target='_blank' href="https://butterfly.js.org/" style='margin-inline:5px' title="主题版本Butterfly_v4.3.1")
-      img(src="https://sourcebucket.s3.ladydaily.com/badge/Theme-Butterfly-6513df.svg" alt='')
+      img(src="https://sourcebucket.s3.bitiful.net/badge/Theme-Butterfly-6513df.svg" alt='')
 
     a.github-badge(target='_blank' href="https://user.51.la/" style='margin-inline:5px' title="本站数据分析得益于51la技术支持")
-      img(src="https://sourcebucket.s3.ladydaily.com/badge/Analytics-51la-3db1eb.svg" alt='')
+      img(src="https://sourcebucket.s3.bitiful.net/badge/Analytics-51la-3db1eb.svg" alt='')
 
     a.github-badge(target='_blank' href="https://github.com/" style='margin-inline:5px' title="本网站源码由Github提供存储仓库")
-      img(src=" https://sourcebucket.s3.ladydaily.com/badge/Source-Github-d021d6.svg" alt='')
+      img(src="https://sourcebucket.s3.bitiful.net/badge/Source-Github-d021d6.svg" alt='')
 
     //- a.github-badge(target='_blank' href="http://creativecommons.org/licenses/by-nc-sa/4.0/" style='margin-inline:5px' title="本站采用知识共享署名-非商业性使用-相同方式共享4.0国际许可协议进行许可")
     //-   img(src="https://sourcebucket.s3.ladydaily.com/badge/Copyright-BY--NC--SA--4.svg" alt='')
