更新头像地址

--- a/themes/butterfly/layout/includes/footer.pug
+++ b/themes/butterfly/layout/includes/footer.pug
@@ -32,7 +32,7 @@
       .ft-img-group
         .img-group-item
           a(href='http://wjldarling.top/' title='你好可爱')
-            img(src='https://cdn.staticaly.com/gh/1405720461/images@master/img/188.jpg' alt='')
+            img(src='https://wangjinglun.oss-cn-beijing.aliyuncs.com/images/1.jpg' alt='')
         .img-group-item
           a(href='https://www.biqing.top/' title='BiQing')
             img(src='https://biqing-blog.oss-cn-hangzhou.aliyuncs.com/img/image-20230102161539190.png' alt='')
