--- a/themes/butterfly/layout/includes/footer.pug
+++ b/themes/butterfly/layout/includes/footer.pug
@@ -45,16 +45,16 @@
    
         //- .img-group-item
         //-   a(href='javascript:void(0)' title='广告位招租')
-        //-     img(src='https://cdn.staticaly.com/gh/1405720461/images@master/img/188.jpg' alt='')
+        //-     img(src='https://cdn.jsdelivr.net/gh/1405720461/images@master/img/188.jpg' alt='')
         //- .img-group-item
         //-   a(href='javascript:void(0)' title='广告位招租')
-        //-     img(src='https://cdn.staticaly.com/gh/1405720461/images@master/img/188.jpg' alt='')
+        //-     img(src='https://cdn.jsdelivr.net/gh/1405720461/images@master/img/188.jpg' alt='')
         //- .img-group-item
         //-   a(href='javascript:void(0)' title='广告位招租')
-        //-     img(src='https://cdn.staticaly.com/gh/1405720461/images@master/img/188.jpg' alt='')
+        //-     img(src='https://cdn.jsdelivr.net/gh/1405720461/images@master/img/188.jpg' alt='')
         //- .img-group-item
         //-   a(href='javascript:void(0)' title='广告位招租')
-        //-     img(src='https://cdn.staticaly.com/gh/1405720461/images@master/img/188.jpg' alt='')
+        //-     img(src='https://cdn.jsdelivr.net/gh/1405720461/images@master/img/188.jpg' alt='')
 
   if theme.footer.owner.enable
     - var now = new Date()
