--- a/themes/butterfly/source/css/_tags/tabs.styl
+++ b/themes/butterfly/source/css/_tags/tabs.styl
@@ -51,7 +51,7 @@
       .tab-item-content
         position: relative
         display: none
-        padding: 36px 24px
+        padding: 36px 24px 5px 24px
 
         +maxWidth768()
           padding: 24px 14px
