--- a/themes/butterfly/source/css/_flink_style/flexcard.styl
+++ b/themes/butterfly/source/css/_flink_style/flexcard.styl
@@ -1,16 +1,15 @@
 #article-container img
   margin 0 auto!important
 .flink-list
-  overflow auto
+  overflow hidden
   & > a
-    width 240px
     height 135px
     position relative
     display block
-    margin 15px 7px
+    aspect-ratio 16/9
     float left
-    overflow hidden
     border-radius 10px
+    overflow hidden
     transition all .3s ease 0s, transform .6s cubic-bezier(.6, .2, .1, 1) 0s
     box-shadow 0 14px 38px rgba(0, 0, 0, .08), 0 3px 8px rgba(0, 0, 0, .06)
     &:hover
@@ -18,7 +17,8 @@
         transform translateY(-100%)
       &::before
         position: fixed
-        width:300px
+        width: fit-content
+        max-width: 700px
         margin:auto
         left:0
         right:0
@@ -29,7 +29,7 @@
         content: attr(data-title)
         font-size: 20px
         color: #fff
-        padding: 10px
+        padding: 10px 20px
         background-color: rgba($theme-color,0.8)
 
     .cover
@@ -42,6 +42,7 @@
       img
         height 130px
         pointer-events none
+        border-radius 4px
 
     .info
       display flex
@@ -80,16 +81,6 @@
   position absolute
   top 0
   left 0
-
-@media screen and (max-width:1024px)
-  .flink-list
-    & > a
-      width calc(33.33333% - 15px)
-
-@media screen and (max-width:600px)
-  .flink-list
-    & > a
-      width calc(50% - 15px)
 
 [data-theme=dark]
   .flink-list a .info,
